# GameEngineArch

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  azure-pipelines.yml  readme.md  vcpkg.json
Examples/BreakOut/: Background.h  Ball.cpp  Ball.h  BreakOutApp.cpp  BreakOutApp.h  BreakOutEntity.h  BreakOutWorld.h  Brick.cpp  Brick.h  CMakeLists.txt  Level.cpp  Level.h  Paddle.cpp  Paddle.h  Wall.cpp  Wall.h  main.cpp
Examples/BreakOut/Physics/: PhysicsSystem.cpp  PhysicsSystem.h  RigidBody2D.cpp  RigidBody2D.h
Examples/BreakOut/Shaders/: vertex_shader.vert
Examples/HelloTriangle/: CMakeLists.txt  HelloTriangleApp.cpp  HelloTriangleApp.h  main.cpp
Examples/KinematicsDemo/: CMakeLists.txt  KinematicsDemoApp.cpp  KinematicsDemoApp.h  main.cpp
Examples/KinematicsDemo/assets/: vert_shader.vert
Examples/PhysicsDemo/: Ball.h  Block.h  CMakeLists.txt  PhysicsApp.cpp  PhysicsApp.h  PhysicsDemoApp.cpp  PhysicsDemoApp.h  Wall.cpp  Wall.h  main.cpp
Libraries/ECS/: App.cpp  App.h  CMakeLists.txt  Component.hpp  ECSObject.hpp  ECSPool.hpp  Entity.hpp  IComponent.h  IEntity.h  IResource.h  ISystem.h  IWorld.h  Resource.hpp  ResourceManager.h  System.hpp  World.hpp
Libraries/Math/: CMakeLists.txt
Libraries/Math/LinearAlgebra/: SquareMatrix.hpp  SquareMatrix4x4.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Libraries/Math/Units/: Angle.hpp  AngularAcceleration.hpp  AngularVelocity.hpp  Degree.hpp  Minute.hpp  Radian.hpp  Second.hpp  Time.hpp  Unit.hpp
Libraries/Physics/: CMakeLists.txt  IPhysicsEngine.h  PhysicsData.h  PhysicsEngine.cpp  PhysicsEngine.h
Libraries/Renderer/: CMakeLists.txt  GLFW_Window.cpp  GLFW_Window.h  IRenderer.cpp  IRenderer.h  IVertexBuffer.h  IWindow.cpp  IWindow.h  VertexDataConfig.h
Libraries/Renderer/Camera/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Fly_Camera.cpp  Fly_Camera.h
Libraries/Renderer/GLFW/: GLFW_Window.h
Libraries/Renderer/Lighting/: Light.h  Light_Attenuation.h  Light_Directional.h  Light_Point.h  Light_Spotlight.h
Libraries/Renderer/Objects/: GenericVertexes.hpp  Mesh.cpp  Mesh.h  SpriteVertexData.h  VertexData.h
Libraries/Renderer/OpenGL/: OpenGL_Renderer.cpp  OpenGL_Renderer.h  OpenGL_VertexBuffer.cpp  OpenGL_VertexBuffer.h
Libraries/Renderer/Shader/: IShader.h  IShaderProgram.h  Preprocessor.cpp  Preprocessor.h  Shader.cpp  Shader.h
Libraries/Renderer/Texture/: Color.h  IImageFile.h  IMaterial.h  ITexture.h  ImageFile.cpp  ImageFile.h  Material.cpp  Material.h  RGB_Color.h  Texture.cpp  Texture.h
Modules/: CMakeLists.txt
Modules/App/: App.cpp  App.h  CMakeLists.txt
Modules/App/inc/: App.h
Modules/App/src/: App.cpp
Modules/Debug/: CMakeLists.txt
Modules/Debug/Logging/: CMakeLists.txt  ILogBuffer.h  ILogManager.cpp  ILogManager.h  ILogger.h  LogBuffer.h  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h
Modules/Debug/inc/: ILogBuffer.h  ILogManager.h  ILogger.h  LogBuffer.h  LogManager.h  Logger.h
Modules/Debug/src/: ILogManager.cpp  LogManager.cpp  Logger.cpp
Modules/ECS/: CMakeLists.txt  Component.h  ComponentID.h  ComponentPointer.h  ComponentPool.h  CustomEntity.h  Entity.h  EntityPointer.h  IComponent.h  IEntity.h  ISystem.h  IWorld.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.h  System.cpp  System.h  Tag.cpp  Tag.h  WeakComponentPointer.h  World.h
Modules/GUI/: CMakeLists.txt
Modules/GUI/Window/: CursorPosition.hpp  IWindow.h  KeyMapping.hpp  KeyModifiers.hpp  KeyPressedInfo.hpp  Keys.h  MouseClickedInfo.hpp  WindowMessagePump.h  WindowMessages.hpp  WindowSize.hpp  Window_GLFW.cpp  Window_GLFW.h
Modules/GUI/inc/: GLFWWindow.h  IWindow.h  Keys.h  WindowSize.hpp  Window_GLFW.h
Modules/GUI/src/: GLFWWindow.cpp  IWindow.cpp  Window_GLFW.cpp
Modules/Generic/: CMakeLists.txt  ClassID.hpp  DebugCast.hpp  DebugMutex.hpp  FloatComp.hpp  MutexProtected.hpp  NullMutex.hpp  Singleton.hpp  SquareMatrix.hpp  SquareMatrix4x4.hpp  StaticMap.hpp  UID.hpp  Vector.hpp  Vector3.hpp  Vector4.hpp
Modules/Generic/LinearAlgebra/: SquareMatrix.hpp  SquareMatrix4x4.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Modules/Jobs/: CMakeLists.txt  Job.cpp  Job.h
Modules/Memory/: CMakeLists.txt  PoolMemoryBlock.hpp  StaticFreeMemoryBlock.hpp  StaticLinearMemoryBlock.hpp  StaticPoolMemoryBlock.hpp  StaticStackMemoryBlock.hpp
Modules/Messaging/: CMakeLists.txt  Event.hpp  EventSubscriber.hpp  LargeDataMessage.hpp  Message.hpp  MessagePump.hpp  MessageSubscribers.hpp  SmallDataMessage.hpp
Modules/Phsics/: CMakeLists.txt  PhysicsSystem.cpp  RigidBody2D.h
Modules/Physics/: CMakeLists.txt  DebugSpriteEntity.h  HitCircle.cpp  HitCircle.h  HitRectangle.cpp  HitRectangle.h  HitShape.cpp  HitShape.h  HitSquare.cpp  HitSquare.h  KinematicData.cpp  KinematicData.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody2D.cpp  RigidBody2D.h
Modules/Render/: CMakeLists.txt  IRenderer.h  Matrix4x4.cpp  Matrix4x4.h  Renderer.cpp  Renderer.h
RenderTestApp/: CMakeLists.txt  ComputeShader.h  FragmentShader.cpp  FragmentShader.h  GeometryShader.h  Object3D.cpp  ObjectBuffer.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  VertexShader.cpp  VertexShader.h  main.cpp
RenderTestApp/Shader/: ComputeShader.cpp  GeometryShader.h  Shader.h
Test/: CMakeLists.txt  Circle_Physics_Tests.cpp  ECS_Tests.cpp  Event_Tests.cpp  Jobs_Tests.cpp  LinearAlg_Tests.cpp  LinearAlgebra_Tests.cpp  Logging_Tests.cpp  Messaging_Tests.cpp  ObjectPool_Tests.cpp  Physics_Tests.cpp  PreProcessor_Tests.cpp  Property_Tests.cpp  Queue_Tests.cpp  Rectangle_Physics_Tests.cpp  RingBuffer_Tests.cpp  Stack_Tests.cpp  StaticMap_Tests.cpp  StaticMemoryBlock_Tests.cpp  StringLiteral_Tests.cpp  Units_Tests.cpp  math_lib_testcases.cpp
Test/ECS/: ECS_Tests.hpp  Entity_Tests.cpp  ResourceManager_Tests.cpp  System_Tests.cpp
Test/FunctionalTests/: CMakeLists.txt  main.cpp
Test/Preprocessor/: main.cpp  main2.cpp  main3.cpp  processed_main.cpp  processed_main2.cpp  processed_main3.cpp  test_file2.h  test_file3.h
Test/UnitTests/: CMakeLists.txt  Logging_Tests.cpp
(+297 files in other folders)
